force-app/main/default/objects/Case/fields/Generic_Account__c.field-meta.xml
<CustomField>
    <fullName>Generic_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Generic Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Generic Account)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>