force-app/main/default/objects/Case/fields/Go_For_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Go_For_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Go For Delivery</label>
    <type>Checkbox</type>
</CustomField>