force-app/main/default/objects/Case/fields/Health_Education_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Health_Education_Per_Month__c</fullName>
    <label>Health &amp; Education Per Month</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>