force-app/main/default/objects/Case/fields/Help_Find_New_Car__c.field-meta.xml
<CustomField>
    <fullName>Help_Find_New_Car__c</fullName>
    <label>Help Find New Car</label>
    <length>255</length>
    <type>Text</type>
</CustomField>