force-app/main/default/objects/Case/fields/Home_Contents__c.field-meta.xml
<CustomField>
    <fullName>Home_Contents__c</fullName>
    <label>Home Contents</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>