force-app/main/default/objects/Case/fields/Incorrect_Handover__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Handover__c</fullName>
    <label>Incorrect Handover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>