force-app/main/default/objects/Case/fields/Incorrect_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorrect Settlement</label>
    <type>Checkbox</type>
</CustomField>