force-app/main/default/objects/Case/fields/InRateExperiment__c.field-meta.xml
<CustomField>
    <fullName>InRateExperiment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InRateExperiment</label>
    <type>Checkbox</type>
</CustomField>