force-app/main/default/objects/Case/fields/Insurance_Received__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Received</label>
    <type>Checkbox</type>
</CustomField>