force-app/main/default/objects/Case/fields/Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_rate__c</fullName>
    <label>Interest Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>