force-app/main/default/objects/Case/fields/Investments__c.field-meta.xml
<CustomField>
    <fullName>Investments__c</fullName>
    <label>Investments</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>