force-app/main/default/objects/Case/fields/Is_Finance_First__c.field-meta.xml
<CustomField>
    <fullName>Is_Finance_First__c</fullName>
    <label>Is Finance First</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>