force-app/main/default/objects/Case/fields/isCollapsed__c.field-meta.xml
<CustomField>
    <fullName>isCollapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCollapsed</label>
    <type>Checkbox</type>
</CustomField>