force-app/main/default/objects/Case/fields/isSkip__c.field-meta.xml
<CustomField>
    <fullName>isSkip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used to bypass the validation rule</description>
    <inlineHelpText>This field is being used to bypass the validation rule</inlineHelpText>
    <label>isSkip</label>
    <type>Checkbox</type>
</CustomField>