force-app/main/default/objects/Case/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>IF(ISBLANK(Partner_Account_Name__c), Source__c, IF( ISBLANK(Source__c) , Partner_Account_Name__c, Partner_Account_Name__c &amp; &quot; / &quot; &amp; Source__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>