force-app/main/default/objects/Case/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <description>This field syncs from Dash ( Loan applications--&gt;data) to SF</description>
    <label>LeadId</label>
    <type>TextArea</type>
</CustomField>