force-app/main/default/objects/Case/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <label>Lender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angle</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>Finance One</fullName>
            </value>
            <value>
                <fullName>GetCapital</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Latitude</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
            <value>
                <fullName>Macquarie</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Money3</fullName>
            </value>
            <value>
                <fullName>MoneyPlace</fullName>
            </value>
            <value>
                <fullName>Now Finance</fullName>
            </value>
            <value>
                <fullName>Pepper</fullName>
            </value>
            <value>
                <fullName>Society One</fullName>
            </value>
            <value>
                <fullName>Afs</fullName>
            </value>
            <value>
                <fullName>Finance One Commercial</fullName>
            </value>
            <value>
                <fullName>Liberty Commercial</fullName>
            </value>
            <value>
                <fullName>Macquarie Commercial</fullName>
            </value>
            <value>
                <fullName>Pepper Commercial</fullName>
            </value>
            <value>
                <fullName>Prospa</fullName>
            </value>
            <value>
                <fullName>Plenti PL</fullName>
            </value>
            <value>
                <fullName>SocietyOne</fullName>
            </value>
            <value>
                <fullName>St.George</fullName>
            </value>
            <value>
                <fullName>Westpac</fullName>
            </value>
            <value>
                <fullName>Wisr PL</fullName>
            </value>
            <value>
                <fullName>Plenti Commercial</fullName>
            </value>
            <value>
                <fullName>Firstmac</fullName>
            </value>
            <value>
                <fullName>Plenti</fullName>
            </value>
            <value>
                <fullName>Wisr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>