force-app/main/default/objects/Case/fields/Lender_Switch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lender_Switch_Reason__c</fullName>
    <label>Lender Switch Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE higher than quoted</fullName>
            </value>
            <value>
                <fullName>BS required &amp; falls out of policy</fullName>
            </value>
            <value>
                <fullName>Serviceability</fullName>
            </value>
            <value>
                <fullName>Emp Type or Tenure Incorrect</fullName>
            </value>
            <value>
                <fullName>ATM Withdrawals/Gambling</fullName>
            </value>
            <value>
                <fullName>Loan Amount</fullName>
            </value>
            <value>
                <fullName>Dishonours</fullName>
            </value>
            <value>
                <fullName>Paydays</fullName>
            </value>
            <value>
                <fullName>Repayment History</fullName>
            </value>
            <value>
                <fullName>Customer Requires PL</fullName>
            </value>
            <value>
                <fullName>Doc Requirements not met</fullName>
            </value>
            <value>
                <fullName>Joint Application</fullName>
            </value>
            <value>
                <fullName>No Early Termination Fees</fullName>
            </value>
            <value>
                <fullName>Switch to Commercial</fullName>
            </value>
            <value>
                <fullName>Recent Drawdown</fullName>
            </value>
            <value>
                <fullName>Debt to income Ratio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>