force-app/main/default/objects/Case/fields/Lender_Switching__c.field-meta.xml
<CustomField>
    <fullName>Lender_Switching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lender Switching flag</description>
    <label>Lender Switching</label>
    <type>Checkbox</type>
</CustomField>