force-app/main/default/objects/Case/fields/Loan_Class__c.field-meta.xml
<CustomField>
    <fullName>Loan_Class__c</fullName>
    <label>Loan Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>