force-app/main/default/objects/Case/fields/Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_ID__c</fullName>
    <label>Loan-ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>