force-app/main/default/objects/Case/fields/Loan_Processor__c.field-meta.xml
<CustomField>
    <fullName>Loan_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For assigning a loan processor to lodge an application</description>
    <label>Loan Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>