force-app/main/default/objects/Case/fields/Loan_Processor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Processor_First_Name__c</fullName>
    <formula>Loan_Processor__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Processor First Name</label>
    <type>Text</type>
</CustomField>