force-app/main/default/objects/Case/fields/Loan_Uuid__c.field-meta.xml
<CustomField>
    <fullName>Loan_Uuid__c</fullName>
    <label>Loan Uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>