force-app/main/default/objects/Case/fields/Lodgement_Agent__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lodgement Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lodgement_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>