force-app/main/default/objects/Case/fields/Lodgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Date__c</fullName>
    <description>Changing Field Type from Date to Date/Time</description>
    <label>Lodgement Date</label>
    <type>DateTime</type>
</CustomField>