force-app/main/default/objects/Case/fields/Master_Score__c.field-meta.xml
<CustomField>
    <fullName>Master_Score__c</fullName>
    <label>Master Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>