force-app/main/default/objects/Case/fields/Mobile_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Contact__c</fullName>
    <formula>HYPERLINK(&quot;tel:&quot; &amp;  Contact.Phone , Contact.Phone,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Contact</label>
    <type>Text</type>
</CustomField>