force-app/main/default/objects/Case/fields/Monthly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fees__c</fullName>
    <label>Monthly Fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>