force-app/main/default/objects/Case/fields/Monthly_repayment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_repayment__c</fullName>
    <label>Monthly Repayment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>