force-app/main/default/objects/Case/fields/Need_To_Notify_Customer__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Notify_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need To Notify Customer</label>
    <type>Checkbox</type>
</CustomField>