force-app/main/default/objects/Case/fields/Net_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Monthly_Income__c</fullName>
    <formula>IF( ISPICKVAL( Primary_Income_Frequency__c , &quot;Weekly&quot;) , Primary_Income_Amount__c *4.33,
IF( ISPICKVAL( Primary_Income_Frequency__c , &quot;Fortnightly&quot;) , Primary_Income_Amount__c *2.17,
IF( ISPICKVAL( Primary_Income_Frequency__c , &quot;Monthly&quot;) , Primary_Income_Amount__c *1,
IF( ISPICKVAL( Primary_Income_Frequency__c , &quot;Yearly&quot;) , Primary_Income_Amount__c  / 12,
Primary_Income_Amount__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>