force-app/main/default/objects/Case/fields/New_Loan_Balloon__c.field-meta.xml
<CustomField>
    <fullName>New_Loan_Balloon__c</fullName>
    <label>New Loan Balloon</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>