force-app/main/default/objects/Case/fields/New_Loan_Years__c.field-meta.xml
<CustomField>
    <fullName>New_Loan_Years__c</fullName>
    <label>New Loan Years</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>