force-app/main/default/objects/Case/fields/Not_proceeding_with_dealer_partner__c.field-meta.xml
<CustomField>
    <fullName>Not_proceeding_with_dealer_partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not proceeding with dealer partner</label>
    <type>Checkbox</type>
</CustomField>