force-app/main/default/objects/Case/fields/Origination_fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_fee__c</fullName>
    <label>Origination Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>