force-app/main/default/objects/Case/fields/Other_Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Asset_Description__c</fullName>
    <label>Other Asset Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>