force-app/main/default/objects/Case/fields/Others_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Others_Per_Month__c</fullName>
    <label>Others Per Month</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>