force-app/main/default/objects/Case/fields/Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Name__c</fullName>
    <formula>Partner_Account__r.Name</formula>
    <label>Partner Account Name</label>
    <type>Text</type>
</CustomField>