force-app/main/default/objects/Case/fields/Partner_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Income_Amount__c</fullName>
    <label>Partner Income Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>