force-app/main/default/objects/Case/fields/Personal_Loan__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loan__c</fullName>
    <description>This field is used for Loan Purpose</description>
    <inlineHelpText>Loan Purpose Options</inlineHelpText>
    <label>Personal Loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debt Consolidation</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Home Improvements</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Repairs</fullName>
            </value>
            <value>
                <fullName>Moving Costs</fullName>
            </value>
            <value>
                <fullName>Rental Bond</fullName>
            </value>
            <value>
                <fullName>Pay Utility Bills</fullName>
            </value>
            <value>
                <fullName>Pay Fees</fullName>
            </value>
            <value>
                <fullName>Solar / Battery</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Legal / Professional Services</fullName>
            </value>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Motorbike</fullName>
            </value>
            <value>
                <fullName>Funeral Expenses</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Personal Income Tax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>