force-app/main/default/objects/Case/fields/PL_settled__c.field-meta.xml
<CustomField>
    <fullName>PL_settled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PL Settled</label>
    <type>Checkbox</type>
</CustomField>