force-app/main/default/objects/Case/fields/Post_lodgement_lender_request__c.field-meta.xml
<CustomField>
    <fullName>Post_lodgement_lender_request__c</fullName>
    <label>Post-lodgement lender request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct debit details</fullName>
            </value>
            <value>
                <fullName>Liability statement</fullName>
            </value>
            <value>
                <fullName>ID / Certified ID</fullName>
            </value>
            <value>
                <fullName>Tenancy Agreement</fullName>
            </value>
            <value>
                <fullName>Payslips</fullName>
            </value>
            <value>
                <fullName>Bank statements (incorrect)</fullName>
            </value>
            <value>
                <fullName>Bank statements (other account)</fullName>
            </value>
            <value>
                <fullName>Proof of address</fullName>
            </value>
            <value>
                <fullName>Closure statement</fullName>
            </value>
            <value>
                <fullName>BNPL clarification</fullName>
            </value>
            <value>
                <fullName>Partner payslip</fullName>
            </value>
            <value>
                <fullName>Employment contract</fullName>
            </value>
            <value>
                <fullName>Personal loan reason</fullName>
            </value>
            <value>
                <fullName>ATM transactions</fullName>
            </value>
            <value>
                <fullName>Other transaction clarification</fullName>
            </value>
            <value>
                <fullName>Payout letter</fullName>
            </value>
            <value>
                <fullName>Employer contact details</fullName>
            </value>
            <value>
                <fullName>Rental/Boarding contact details</fullName>
            </value>
            <value>
                <fullName>Medicare card clarification</fullName>
            </value>
            <value>
                <fullName>Default clarification</fullName>
            </value>
            <value>
                <fullName>Outcome of recent enquiries</fullName>
            </value>
            <value>
                <fullName>Liability details</fullName>
            </value>
            <value>
                <fullName>Living expense clarification</fullName>
            </value>
            <value>
                <fullName>Maximum lend confirmation</fullName>
            </value>
            <value>
                <fullName>Relationship clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>