force-app/main/default/objects/Case/fields/Post_settlement_complete__c.field-meta.xml
<CustomField>
    <fullName>Post_settlement_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-settlement Complete</label>
    <type>Checkbox</type>
</CustomField>