force-app/main/default/objects/Case/fields/Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval__c</fullName>
    <label>Pre-Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requires Pre-approval Call</fullName>
            </value>
            <value>
                <fullName>Awaiting Settlement Conditions From Customer</fullName>
                <label>Awaiting Settlement Conditions</label>
            </value>
            <value>
                <fullName>Tax Invoice Request</fullName>
            </value>
            <value>
                <fullName>Verimoto Pending</fullName>
            </value>
            <value>
                <fullName>Awaiting Registration</fullName>
            </value>
            <value>
                <fullName>Lender Contract Generator</fullName>
                <label>Lender Contract Generation</label>
            </value>
            <value>
                <fullName>Documents for Customer for Signing</fullName>
                <label>Documents with Customer for Signing</label>
            </value>
            <value>
                <fullName>Settlement Pending</fullName>
            </value>
            <value>
                <fullName>Cancellation In Progress</fullName>
            </value>
            <value>
                <fullName>Delayed Delivery</fullName>
            </value>
            <value>
                <fullName>Vehicle Search</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Not Proceeding</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>-</label>
            </value>
            <value>
                <fullName>Awaiting Customer Response Contract Generaton</fullName>
                <isActive>false</isActive>
                <label>Awaiting Customer Response Contract Generaton</label>
            </value>
            <value>
                <fullName>Documents with Customer for Signing</fullName>
                <isActive>false</isActive>
                <label>Documents with Customer for Signing</label>
            </value>
            <value>
                <fullName>VEI Post - Settlement</fullName>
                <isActive>false</isActive>
                <label>VEI Post - Settlement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>