force-app/main/default/objects/Case/fields/Pre_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Date__c</fullName>
    <label>Conditional Approval Date</label>
    <type>DateTime</type>
</CustomField>