force-app/main/default/objects/Case/fields/Previous_Employer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer__c</fullName>
    <label>Previous Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>