force-app/main/default/objects/Case/fields/Previous_Employment_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment_Duration_Months__c</fullName>
    <label>Previous Employment Duration Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>