force-app/main/default/objects/Case/fields/Previous_Employment_Duration_Years__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment_Duration_Years__c</fullName>
    <label>Previous Employment Duration Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>