force-app/main/default/objects/Case/fields/Previous_Loan_Term_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Previous_Loan_Term_Remaining__c</fullName>
    <label>Previous Loan Term Remaining</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>