force-app/main/default/objects/Case/fields/Previous_Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Monthly_Repayment__c</fullName>
    <label>Previous Monthly Repayment</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>