force-app/main/default/objects/Case/fields/Primary_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Income_Amount__c</fullName>
    <label>Primary Income Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>